--- a/project_4/project_4.sim/sim_1/behav/xsim/xsim.dir/button_pulser_tb_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/project_4/project_4.sim/sim_1/behav/xsim/xsim.dir/button_pulser_tb_behav/webtalk/usage_statistics_ext_xsim.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>3247384</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Oct 25 13:39:39 2021</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Sun Oct 31 10:57:14 2021</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2021.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>b2a81a7b435d44278b84530df75b51f7</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>84</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>1591d302-f6bf-4744-8337-27a0dbb648d1</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>1591d302-f6bf-4744-8337-27a0dbb648d1</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>FALSE</TD>
@@ -42,9 +42,9 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>iteration=1</TD>
-    <TD>runtime=1001 us</TD>
-    <TD>simulation_memory=16464_KB</TD>
-    <TD>simulation_time=0.26_sec</TD>
+    <TD>runtime=3800 ns</TD>
+    <TD>simulation_memory=7520_KB</TD>
+    <TD>simulation_time=0.22_sec</TD>
 </TR><TR ALIGN='LEFT'>    <TD>trace_waveform=true</TD>
 </TR>   </TABLE>
    </TD></TR>
